# bdm-lab2

./: .gitignore  main.py  pyproject.toml
data/: expanded_standings.csv  player_shooting.csv  player_stats_advanced.csv  team_vs_team.csv
src/: preprocess.py  teamvs_histroy.py
src/models/: __init__.py  player.py  team.py
