[project]
name = "bdmlab2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "wold9168", email = "moewold@outlook.com"},
]
dependencies = ["lightgbm>=4.6.0", "pandas>=2.2.3", "scikit-learn>=1.6.1", "matplotlib>=3.10.1", "debugpy>=1.8.13", "scikit-optimize>=0.10.2", "optuna>=4.2.1", "seaborn>=0.13.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
